@@ -33,9 +33,10 @@ void INIFindStartEnd(char *Key, char **Start, char **End, dword MaxEntrylen)
       return;
     }
 
-    p = *Start;
-    if(*Start > INIBuffer) p--;
-  } while((*p == '#') || (*p == ';'));
+    if (*Start > INIBuffer) p = *Start - 1;
+    else p = "\n";
+  }
+  while (*p != '\n' && *p != '\r' && *p != '\t' && *p != ' ');
 
   CR = strchr(*Start, '\x0d');
   LF = strchr(*Start, '\x0a');
